fixed horizontal scroller appearing

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ body {
     font-family: "Assistant", sans-serif;
 }
 
+.row {
+    margin: 0px;
+}
+
 h1, h2, h3, h4, h5 {
     font-weight: 700;
     letter-spacing: 1px;
